--- a/index.html
+++ b/index.html
@@ -47,8 +47,11 @@
         <!-- article 1 -->
         <article>
             <section>
+                <figure> 
+                    <figcaption> Restaurant </figcaption>
                 <img src="/img/De-Beijaard-Hoorn.jpg" alt="Afbeelding Restaurants"
                     title="Restaurant de beijaard van buiten">
+                </figure>
             </section>
             <section>
                 <h5> Restaurant </h5>
@@ -60,8 +63,11 @@
         <!-- article 2 -->
         <article>
             <section>
+                <figure> 
+                    <figcaption> Kunst en Cultuur </figcaption>
                 <img src="/img/Park-Schouwburg-Hoorn.jpg" alt="Afbeelding Kunst en Kultuur"
                     title="park Schouwburg in de avond">
+                </figure>
             </section>
             <section>
                 <h5> Kunst en Cultuur </h5>
@@ -74,7 +80,10 @@
         <!-- article 3 -->
         <article>
             <section>
+                <figure> 
+                    <figcaption> Evenementen </figcaption>
                 <img src="/img/Kermis-Hoorn.jpg" alt="Afbeelding Evenementen" title="Kermis Hoorn op de rodesteen">
+            </figure>
             </section>
             <section>
                 <h5> Evenementen </h5>
@@ -87,8 +96,8 @@
         <article>
             <section>
                 <figure>
-                <img src="/img/Sportcentrum-Hoorn.jpg" alt="Afbeelding Recreatie" title="Binnen in Sportcentrum Hoorn">
-                <figcaption> Recreatie </figcaption>
+                    <figcaption> Recreatie </figcaption>
+                <img src="/img/Sportcentrum-Hoorn.jpg" alt="Afbeelding Recreatie" title="Binnen in Sportcentrum Hoorn">           
             </figure>
             </section>
             <section>
