--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="author" content="Nhat Nguyen">
     <title> Home Pagina </title>
-    <link rel="stylesheet" href="/css/Home_Page.css">
-    <link rel="stylesheet" href="/css/MainStyleFile.css">
+    <link rel="stylesheet" type="text/css" href="/css/Home_Page.css">
+    <link rel="stylesheet" type="text/css" href="/css/MainStyleFile.css">
     <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-32x32.png">
 </head>
 
