--- a/Contact_Page.html
+++ b/Contact_Page.html
@@ -14,7 +14,7 @@
 <body>
     <!-- nav bar -->
     <nav>
-        <img src="/img/LogoWebsite.png" alt="View hoorn LogoWebsite" title="title of website" />
+        <img src="img/LogoWebsite.png" alt="View hoorn LogoWebsite" title="title of website" />
         <ul>
             <li> <a href="index.html"> Home </a> </li>
             <li> <a href="Restaurants.html"> Restaurants </a> </li>
@@ -86,7 +86,7 @@
 
     <!-- footer -->
     <footer>
-        <img src="/img/LogoWebsite.png" alt="View hoorn LogoWebsite" title="title of website" />
+        <img src="img/LogoWebsite.png" alt="View hoorn LogoWebsite" title="title of website" />
         <p> View Hoorn 2024 &copy; </p>
         <ul>
             <li> <a href="https://policies.google.com/privacy?hl=en-US"> Privacy policy </a> </li>
