--- a/Events.html
+++ b/Events.html
@@ -13,7 +13,7 @@
 <body>
     <!-- nav bar -->
     <nav>
-        <img src="/img/LogoWebsite.png" alt="View hoorn LogoWebsite" title="title of website" />
+        <img src="img/LogoWebsite.png" alt="View hoorn LogoWebsite" title="title of website" />
         <ul>
             <li> <a href="index.html"> Home </a> </li>
             <li> <a href="Restaurants.html"> Restaurants </a> </li>
@@ -30,7 +30,7 @@
              <!-- block 1 -->
              <article>
                 <section>
-                    <img src="/img/Jaarmarkt-Blokker.jpg" alt="Afbeelding jaarmarktblokker"
+                    <img src="img/Jaarmarkt-Blokker.jpg" alt="Afbeelding jaarmarktblokker"
                     title="verschillende kraampjes op straat in Blokker">
                 </section>
                 <section>
@@ -59,26 +59,17 @@
                     <button> <a href="https://www.kermis-hoorn.nl/"> Bezoek website </a> </button>
                 </section>
                 <section>   
-                    <img src="/img/Kermis-Hoorn.jpg" alt="Afbeelding van kermis Hoorn"
+                    <img src="img/Kermis-Hoorn.jpg" alt="Afbeelding van kermis Hoorn"
                     title="attracties op de rode steen">
                 </section>
             </article>
 
            <!-- block 3 -->
             <article>
-                <section>
-                    <img src="" alt=""
-                    title="">
+                <section>   
+                    <img src="img/Live-In-Hoorn.jpg" alt="Afbeelding live in Hoorn"
+                    title="Podium live in Hoorn met publiek">
                 </section>
-                <section>
-                    <h3> </h3>
-                    <p> Test ketst </p>
-                    <button> <a href=""> Bezoek website </a> </button>
-                </section>
-            </article>
-
-            <!-- block 4 -->
-            <article>
                 <section>
                     <h3> Live in Hoorn </h3>
                     <p> Live in Hoorn is een muzikaal feest dat sinds 2007 onregelmatig wordt gehouden. Het
@@ -89,18 +80,15 @@
                     </p>
                     <button> <a href="https://www.liveinhoorn.nl/"> Bezoek website </a> </button>
                 </section>
-                <section>   
-                    <img src="/img/Live-In-Hoorn.jpg" alt="Afbeelding live in Hoorn"
-                    title="Podium live in Hoorn met publiek">
-                </section>
             </article>
 
         </section>
+
     </main>
 
     <!-- footer -->
     <footer>
-        <img src="/img/LogoWebsite.png" alt="View hoorn LogoWebsite" title="title of website" />
+        <img src="img/LogoWebsite.png" alt="View hoorn LogoWebsite" title="title of website" />
         <p> View Hoorn 2024 &copy; </p>
         <ul>
             <li> <a href="https://policies.google.com/privacy?hl=en-US"> Privacy policy </a> </li>
