--- a/History_And_Culture.html
+++ b/History_And_Culture.html
@@ -13,7 +13,7 @@
 <body>
     <!-- nav bar -->
     <nav>
-        <img src="/img/LogoWebsite.png" alt="View hoorn LogoWebsite" title="title of website" />
+        <img src="img/LogoWebsite.png" alt="View hoorn LogoWebsite" title="title of website" />
         <ul>
             <li> <a href="index.html"> Home </a> </li>
             <li> <a href="Restaurants.html"> Restaurants </a> </li>
@@ -30,7 +30,7 @@
              <!-- block 1 -->
              <article>
                 <section>
-                    <img src="/img/Westfries-Museum-Hoorn.jpg" alt="Afbeelding voorkant westvries museum"
+                    <img src="img/Westfries-Museum-Hoorn.jpg" alt="Afbeelding voorkant westvries museum"
                     title="De voorkant van het WestFries Museum">
                 </section>
                 <section>
@@ -59,7 +59,7 @@
                     <button> <a href="https://www.hetpark.nl/"> Bezoek website </a> </button>
                 </section>
                 <section>   
-                    <img src="/img/Park-Schouwburg-Hoorn.jpg" alt="Afbeelding Park Schouwburg"
+                    <img src="img/Park-Schouwburg-Hoorn.jpg" alt="Afbeelding Park Schouwburg"
                     title="Park Schouwburg in de avond">
                 </section>
             </article>
@@ -67,7 +67,7 @@
             <!-- block 3 -->
             <article>
                 <section>
-                    <img src="/img/Museum-Van-De-20-Eeuw-Hoorn.webp" alt="Afbeelding Museum van de 20ste eeuw"
+                    <img src="img/Museum-Van-De-20-Eeuw-Hoorn.webp" alt="Afbeelding Museum van de 20ste eeuw"
                     title="Het museum van de 20ste eeuw vanaf een van de ingangen">
                 </section>
                 <section>
@@ -97,7 +97,7 @@
                     <button> <a href="https://halvemaen.nl/"> Bezoek website </a> </button>
                 </section>
                 <section>   
-                    <img src="/img/De-Halve-Maen-Hoorn.jpg" alt="Afbeelding van de halve maen"
+                    <img src="img/De-Halve-Maen-Hoorn.jpg" alt="Afbeelding van de halve maen"
                     title="De halve maen aan de kade">
                 </section>
             </article>
@@ -107,7 +107,7 @@
 
     <!-- footer -->
     <footer>
-        <img src="/img/LogoWebsite.png" alt="View hoorn LogoWebsite" title="title of website" />
+        <img src="img/LogoWebsite.png" alt="View hoorn LogoWebsite" title="title of website" />
         <p> View Hoorn 2024 &copy; </p>
         <ul>
             <li> <a href="https://policies.google.com/privacy?hl=en-US"> Privacy policy </a> </li>
