--- a/Recreation.html
+++ b/Recreation.html
@@ -13,7 +13,7 @@
 <body>
     <!-- nav bar -->
     <nav>
-        <img src="/img/LogoWebsite.png" alt="View hoorn LogoWebsite" title="title of website" />
+        <img src="img/LogoWebsite.png" alt="View hoorn LogoWebsite" title="title of website" />
         <ul>
             <li> <a href="index.html"> Home </a> </li>
             <li> <a href="Restaurants.html"> Restaurants </a> </li>
@@ -30,7 +30,7 @@
             <!-- block 1 -->
             <article>
                 <section>
-                    <img src="/img/Vue-Hoorn.jpg" alt="Afbeelding ingang Vue Hoorn"
+                    <img src="img/Vue-Hoorn.jpg" alt="Afbeelding ingang Vue Hoorn"
                     title="De ingang van Vue Hoorn">
                 </section>
                 <section>
@@ -59,7 +59,7 @@
                     <button> <a href="https://www.optisport.nl/zwembad-de-waterhoorn-hoorn"> Bezoek website </a> </button>
                 </section>
                 <section>   
-                    <img src="/img/De-Water-Hoorn.jpg" alt="Afbeelding binnenkant Water Hoorn"
+                    <img src="img/De-Water-Hoorn.jpg" alt="Afbeelding binnenkant Water Hoorn"
                     title="Een van de binnenzwembaden">
                 </section>
             </article>
@@ -67,7 +67,7 @@
             <!-- block 3 -->
             <article>
                 <section>
-                    <img src="/img/Sportcentrum-Hoorn.jpg" alt="Afbeelding binnenkant sportcentrum Hoorn"
+                    <img src="img/Sportcentrum-Hoorn.jpg" alt="Afbeelding binnenkant sportcentrum Hoorn"
                     title="Een van de binnen velden">
                 </section>
                 <section>
@@ -98,7 +98,7 @@
                     <button> <a href="https://samcity.nl/"> Bezoek website </a> </button>
                 </section>
                 <section>   
-                    <img src="/img/Samcity-Hoorn.jpeg" alt="Afbeelding buitenkant sam city"
+                    <img src="img/Samcity-Hoorn.jpeg" alt="Afbeelding buitenkant sam city"
                     title="Het bebouw waarin samcity zit">
                 </section>
             </article>
@@ -107,7 +107,7 @@
 
     <!-- footer -->
     <footer>
-        <img src="/img/LogoWebsite.png" alt="View hoorn LogoWebsite" title="title of website" />
+        <img src="img/LogoWebsite.png" alt="View hoorn LogoWebsite" title="title of website" />
         <p> View Hoorn 2024 &copy; </p>
         <ul>
             <li> <a href="https://policies.google.com/privacy?hl=en-US"> Privacy policy </a> </li>
