--- a/Restaurants.html
+++ b/Restaurants.html
@@ -13,7 +13,7 @@
 <body>
     <!-- nav bar -->
     <nav>
-        <img src="/img/LogoWebsite.png" alt="View hoorn LogoWebsite" title="title of website" />
+        <img src="img/LogoWebsite.png" alt="View hoorn LogoWebsite" title="title of website" />
         <ul>
             <li> <a href="index.html"> Home </a> </li>
             <li> <a href="Restaurants.html"> Restaurants </a> </li>
@@ -30,7 +30,7 @@
             <!-- block 1 -->
             <article>
                 <section>
-                    <img src="/img/De-Beijaard-Hoorn.jpg" alt="Afbeelding van de buitenkant van De Beijaard"
+                    <img src="img/De-Beijaard-Hoorn.jpg" alt="Afbeelding van de buitenkant van De Beijaard"
                         title="Restaurant de beijaard van buiten">
                 </section>
                 <section>
@@ -59,7 +59,7 @@
                     <button> <a href="https://www.wokvanpejo.nl/"> Bezoek website </a> </button>
                 </section>
                 <section>   
-                    <img src="/img/Wok-Van-Pejo-Zwaag.jpg" alt="Afbeelding binnen in Wok van Pejo"
+                    <img src="img/Wok-Van-Pejo-Zwaag.jpg" alt="Afbeelding binnen in Wok van Pejo"
                     title="Ergens in de Wok van Pejo">
                 </section>
             </article>
@@ -67,7 +67,7 @@
             <!-- block 3 -->
             <article>
                 <section>
-                    <img src="/img/Portofino-Hoorn-2.jpg" alt="Afbeelding voorkant portofino met 2 eigenaren"
+                    <img src="img/Portofino-Hoorn-2.jpg" alt="Afbeelding voorkant portofino met 2 eigenaren"
                     title="eigenaren van portofino voor portofino">
                 </section>
                 <section>
@@ -97,7 +97,7 @@
                     <button> <a href="https://ridderikhoff.org/"> Bezoek website </a> </button>
                 </section>
                 <section>   
-                    <img src="/img/Ridderikhoff-Hoorn.jpeg" alt="Buitenkant van restaurant Ridderrikhoff"
+                    <img src="img/Ridderikhoff-Hoorn.jpeg" alt="Buitenkant van restaurant Ridderrikhoff"
                     title="De buitenkant van Ridderrikhoff">
                 </section>
             </article>
@@ -107,7 +107,7 @@
 
     <!-- footer -->
     <footer>
-        <img src="/img/LogoWebsite.png" alt="View hoorn LogoWebsite" title="title of website" />
+        <img src="img/LogoWebsite.png" alt="View hoorn LogoWebsite" title="title of website" />
         <p> View Hoorn 2024 &copy; </p>
         <ul>
             <li> <a href="https://policies.google.com/privacy?hl=en-US"> Privacy policy </a> </li>
