--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- nav bar -->
     <nav>
-        <img src="/img/LogoWebsite.png" alt="View hoorn LogoWebsite" title="title of website" />
+        <img src="img/LogoWebsite.png" alt="View hoorn LogoWebsite" title="title of website" />
         <ul>
             <li> <a href="index.html"> Home </a> </li>
             <li> <a href="Restaurants.html"> Restaurants </a> </li>
@@ -26,18 +26,18 @@
     <!-- header -->
     <section>
         <header>
-            <img src="/img/Hoorn-Hero-V2.jpg" alt="Afbeelding Haven hoorn" title="Grote afbeelding website">
+            <img src="img/Hoorn-Hero-V2.jpg" alt="Afbeelding Haven hoorn" title="Grote afbeelding website">
             <h1> View Hoorn</h1>
             <h2> Bekijk wat je kan doen in Hoorn </h2>
         </header>
         <!-- aside -->
         <aside>
-            <img src="/img/De-Beijaard-Hoorn.jpg" alt="Afbeelding Restaurants"
+            <img src="img/De-Beijaard-Hoorn.jpg" alt="Afbeelding Restaurants"
                 title="Restaurant de beijaard van buiten">
-            <img src="/img/Park-Schouwburg-Hoorn.jpg" alt="Afbeelding Kunst en Kultuur"
+            <img src="img/Park-Schouwburg-Hoorn.jpg" alt="Afbeelding Kunst en Kultuur"
                 title="park Schouwburg in de avond">
-            <img src="/img/Kermis-Hoorn.jpg" alt="Afbeelding Evenementen" title="Kermis Hoorn op de rodesteen">
-            <img src="/img/Sportcentrum-Hoorn.jpg" alt="Afbeelding Recreatie" title="Binnen in Sportcentrum Hoorn">
+            <img src="img/Kermis-Hoorn.jpg" alt="Afbeelding Evenementen" title="Kermis Hoorn op de rodesteen">
+            <img src="img/Sportcentrum-Hoorn.jpg" alt="Afbeelding Recreatie" title="Binnen in Sportcentrum Hoorn">
         </aside>
     </section>
 
@@ -48,15 +48,15 @@
         <article>
             <section>
                 <figure> 
-                    <figcaption> Restaurant </figcaption>
-                <img src="/img/De-Beijaard-Hoorn.jpg" alt="Afbeelding Restaurants"
+                    <figcaption> Restaurants </figcaption>
+                <img src="img/De-Beijaard-Hoorn.jpg" alt="Afbeelding Restaurants"
                     title="Restaurant de beijaard van buiten">
                 </figure>
             </section>
             <section>
-                <h5> Restaurant </h5>
+                <h5> Restaurants </h5>
                 <p> Ontdenk wat voor verschillende restaurants er in Hoorn te ontdekken zijn! </p>
-                <button> <a href="Recreation.html"> Lees meer </a> </button>
+                <button> <a href="Restaurants.html"> Lees meer </a> </button>
             </section>
         </article>
 
@@ -65,7 +65,7 @@
             <section>
                 <figure> 
                     <figcaption> Kunst en Cultuur </figcaption>
-                <img src="/img/Park-Schouwburg-Hoorn.jpg" alt="Afbeelding Kunst en Kultuur"
+                <img src="img/Park-Schouwburg-Hoorn.jpg" alt="Afbeelding Kunst en Kultuur"
                     title="park Schouwburg in de avond">
                 </figure>
             </section>
@@ -82,7 +82,7 @@
             <section>
                 <figure> 
                     <figcaption> Evenementen </figcaption>
-                <img src="/img/Kermis-Hoorn.jpg" alt="Afbeelding Evenementen" title="Kermis Hoorn op de rodesteen">
+                <img src="img/Kermis-Hoorn.jpg" alt="Afbeelding Evenementen" title="Kermis Hoorn op de rodesteen">
             </figure>
             </section>
             <section>
@@ -97,7 +97,7 @@
             <section>
                 <figure>
                     <figcaption> Recreatie </figcaption>
-                <img src="/img/Sportcentrum-Hoorn.jpg" alt="Afbeelding Recreatie" title="Binnen in Sportcentrum Hoorn">           
+                <img src="img/Sportcentrum-Hoorn.jpg" alt="Afbeelding Recreatie" title="Binnen in Sportcentrum Hoorn">           
             </figure>
             </section>
             <section>
@@ -112,7 +112,7 @@
 
     <!-- footer -->
     <footer>
-        <img src="/img/LogoWebsite.png" alt="View hoorn LogoWebsite" title="title of website" />
+        <img src="img/LogoWebsite.png" alt="View hoorn LogoWebsite" title="title of website" />
         <p> View Hoorn 2024 &copy; </p>
         <ul>
             <li> <a href="https://policies.google.com/privacy?hl=en-US"> Privacy policy </a> </li>
