form container image/form

--- a/Contact_Page.html
+++ b/Contact_Page.html
@@ -27,10 +27,11 @@
 
     <main>
         <section id="form_container">
-            <section>
+            <section id="form_decorImage">
                 <img src="img/Hoorn-Hero.jpg" alt="Foto binnenstad Hoorn" title="decoratie pagina">
             </section>
-            <section>
+
+            <section id="form_questionForm">
                 <article>
                     <p> <em> Velden met een <strong> * </strong> zijn verplicht </em> </p>
                     <form>
