--- a/Events.html
+++ b/Events.html
@@ -13,7 +13,7 @@
 <body>
     <!-- nav bar -->
     <nav>
-        <img src="img/LogoWebsite.png" alt="View hoorn LogoWebsite" title="title of website" />
+        <img class="LogoWebsite" src="img/LogoWebsite.png" alt="View hoorn LogoWebsite" title="title of website" />
         <ul>
             <li> <a href="index.html"> Home </a> </li>
             <li> <a href="Restaurants.html"> Restaurants </a> </li>
