redirect button part 1

--- a/Events.html
+++ b/Events.html
@@ -41,7 +41,7 @@
                         demonstratie, pony rijden, ballon kunstenaar, springkussen draaimolen en nog meer! Dus er is
                         altijd wel iets te doen voor jong en oud.
                     </p>
-                    <button> <a href="https://www.jaarmarktblokker.nl/"> Bezoek website </a> </button>
+                    <button class="redirect_button"> <a href="https://www.jaarmarktblokker.nl/"> Bezoek website </a> </button>
                 </section>
             </article>
 
@@ -56,7 +56,7 @@
                         Spoorstraat (44-46), Ramen (47), Niewland (48), Gouw(49-57), Nieuwstraat (58-64), Kerkplein
                         (65-68) en De rode steen (69-71).
                     </p>
-                    <button> <a href="https://www.kermis-hoorn.nl/"> Bezoek website </a> </button>
+                    <button class="redirect_button"> <a href="https://www.kermis-hoorn.nl/"> Bezoek website </a> </button>
                 </section>
                 <section>   
                     <img src="img/Kermis-Hoorn.jpg" alt="Afbeelding van kermis Hoorn"
@@ -78,7 +78,7 @@
                         Live in Hoorn uitgegroeid tot een geliefde gebeurtenis voor muziekliefhebbers en een
                         levendige ontmoetingsplaats voor de gemeenschap.
                     </p>
-                    <button> <a href="https://www.liveinhoorn.nl/"> Bezoek website </a> </button>
+                    <button class="redirect_button"> <a href="https://www.liveinhoorn.nl/"> Bezoek website </a> </button>
                 </section>
             </article>
 
