--- a/Recreation.html
+++ b/Recreation.html
@@ -42,7 +42,7 @@
                             comfortabele zitplaatsen en moderne technologie is Vue Hoorn dé plek voor een complete
                             filmervaring.
                         </p>
-                        <button> <a href="https://www.vuecinemas.nl/vue-cinemas/hoorn"> Bezoek website </a> </button>
+                        <button class="redirect_button"> <a href="https://www.vuecinemas.nl/vue-cinemas/hoorn"> Bezoek website </a> </button>
                 </section>
             </article>
 
@@ -56,7 +56,7 @@
                         glijbanen en wellnessfaciliteiten is de Waterhoorn ideaal voor gezinnen, zwemliefhebbers en
                         iedereen die wil genieten van een verfrissende duik, ongeacht het seizoen.
                     </p>
-                    <button> <a href="https://www.optisport.nl/zwembad-de-waterhoorn-hoorn"> Bezoek website </a> </button>
+                    <button class="redirect_button"> <a href="https://www.optisport.nl/zwembad-de-waterhoorn-hoorn"> Bezoek website </a> </button>
                 </section>
                 <section>   
                     <img src="img/De-Water-Hoorn.jpg" alt="Afbeelding binnenkant Water Hoorn"
@@ -79,7 +79,7 @@
                         ideale plek voor iedereen die aan zijn conditie wil werken of wil ontspannen na een
                         intensieve training.
                     </p>
-                    <button> <a href="https://sportcentrumhoorn.nl/#/"> Bezoek website </a> </button>
+                    <button class="redirect_button"> <a href="https://sportcentrumhoorn.nl/#/"> Bezoek website </a> </button>
                 </section>
             </article>
 
@@ -95,7 +95,7 @@
                         iedereen wel iets te beleven in Sam City. Het centrum staat bekend om zijn dynamische sfeer
                         en biedt een onvergetelijke ervaring voor jong en oud.
                     </p>
-                    <button> <a href="https://samcity.nl/"> Bezoek website </a> </button>
+                    <button class="redirect_button"> <a href="https://samcity.nl/"> Bezoek website </a> </button>
                 </section>
                 <section>   
                     <img src="img/Samcity-Hoorn.jpeg" alt="Afbeelding buitenkant sam city"
