--- a/Restaurants.html
+++ b/Restaurants.html
@@ -42,7 +42,7 @@
                         en een uitnodigende ambiance maakt De Beiaard tot een populaire ontmoetingsplaats in het
                         hart van de stad. 
                     </p>
-                    <button> <a href="https://debeiaard-hoorn.nl/"> Bezoek website </a> </button>
+                    <button class="redirect_button"> <a href="https://debeiaard-hoorn.nl/"> Bezoek website </a> </button>
                 </section>
             </article>
 
@@ -56,7 +56,7 @@
                         smaak iets te vinden, waardoor het een ideale plek is voor zowel liefhebbers van Aziatische
                         gerechten als voor gezinnen of groepen die van variatie houden. 
                     </p>
-                    <button> <a href="https://www.wokvanpejo.nl/"> Bezoek website </a> </button>
+                    <button class="redirect_button"> <a href="https://www.wokvanpejo.nl/"> Bezoek website </a> </button>
                 </section>
                 <section>   
                     <img src="img/Wok-Van-Pejo-Zwaag.jpg" alt="Afbeelding binnen in Wok van Pejo"
@@ -79,7 +79,7 @@
                         iets te vinden. Als je op zoek bent naar een plek om échte Italiaanse smaken te proeven, dan
                         is Portofino de ideale bestemming! 
                     </p>
-                    <button> <a href="https://www.portofinodapiero.nl"> Bezoek website </a> </button>
+                    <button class="redirect_button"> <a href="https://www.portofinodapiero.nl"> Bezoek website </a> </button>
                 </section>
             </article>
 
@@ -94,7 +94,7 @@
                         interieur en de intieme sfeer maken het perfect voor een romantisch diner of speciale
                         gelegenheid, wat Ridderikhoff een waardevolle aanvulling maakt op het culinaire aanbod van
                         Hoorn. </p>
-                    <button> <a href="https://ridderikhoff.org/"> Bezoek website </a> </button>
+                    <button class="redirect_button"> <a href="https://ridderikhoff.org/"> Bezoek website </a> </button>
                 </section>
                 <section>   
                     <img src="img/Ridderikhoff-Hoorn.jpeg" alt="Buitenkant van restaurant Ridderrikhoff"
