--- a/History_And_Culture.html
+++ b/History_And_Culture.html
@@ -41,7 +41,7 @@
                         meer. Dit jaar (2024) kan je tussen 22 juni t/m 3 november meer dan 200 orginele etsen van
                         Rembrandt. Ben je een Rembrandt liefhebber? Mis deze kans dan niet!
                     </p>
-                    <button> <a href="https://westfriesmuseum.nl/"> Bezoek website </a> </button>
+                    <button class="redirect_button"> <a href="https://westfriesmuseum.nl/"> Bezoek website </a> </button>
                 </section>
             </article>
 
@@ -56,7 +56,7 @@
                         uitstekende faciliteiten is het een geliefde plek voor culturele activiteiten en speelt het
                         een belangrijke rol in het culturele leven van Hoorn en omgeving.
                     </p>
-                    <button> <a href="https://www.hetpark.nl/"> Bezoek website </a> </button>
+                    <button class="redirect_button"> <a href="https://www.hetpark.nl/"> Bezoek website </a> </button>
                 </section>
                 <section>   
                     <img src="img/Park-Schouwburg-Hoorn.jpg" alt="Afbeelding Park Schouwburg"
@@ -79,7 +79,7 @@
                         leven van vroeger, de armoede, het lang werken en hoe de woonomstandigheid van vroeger is
                         veranderd vergeleken met nu.
                     </p>
-                    <button> <a href="https://www.museumhoorn.nl/pg-5548-7-7378/pagina/welkom.html"> Bezoek website </a> </button>
+                    <button class="redirect_button"> <a href="https://www.museumhoorn.nl/pg-5548-7-7378/pagina/welkom.html"> Bezoek website </a> </button>
                 </section>
             </article>
 
@@ -94,7 +94,7 @@
                         op lange, gevaarlijke reizen. De Halve Maen fungeert zo als een levend stuk erfgoed en een
                         herinnering aan Hoorns rijke verleden.
                     </p>
-                    <button> <a href="https://halvemaen.nl/"> Bezoek website </a> </button>
+                    <button class="redirect_button"> <a href="https://halvemaen.nl/"> Bezoek website </a> </button>
                 </section>
                 <section>   
                     <img src="img/De-Halve-Maen-Hoorn.jpg" alt="Afbeelding van de halve maen"
