--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <section>
                 <h5> Restaurants </h5>
                 <p> Ontdenk wat voor verschillende restaurants er in Hoorn te ontdekken zijn! </p>
-                <button> <a href="Restaurants.html"> Lees meer </a> </button>
+                <button class="redirect_button"> <a href="Restaurants.html"> Lees meer </a> </button>
             </section>
         </article>
 
@@ -73,7 +73,7 @@
                 <h5> Kunst en Cultuur </h5>
                 <p> Bekijk kunstwerken in de verschillende Musea in Hoorn, of geniet van verschillende
                     voorstellingen in theaters! </p>
-                <button> <a href="History_And_Culture.html"> Lees meer </a> </button>
+                <button class="redirect_button"> <a href="History_And_Culture.html"> Lees meer </a> </button>
             </section>
         </article>
 
@@ -88,7 +88,7 @@
             <section>
                 <h5> Evenementen </h5>
                 <p> Bekijk de jaarlijkse evenementen die in Hoorn gehouden worden! </p>
-                <button> <a href="Events.html"> Lees meer </a> </button>
+                <button class="redirect_button"> <a href="Events.html"> Lees meer </a> </button>
             </section>
         </article>
 
@@ -103,7 +103,7 @@
             <section>
                 <h5> Recreatie </h5>
                 <p> Bekijk wat voor recreatieve mogelijkheden er in Hoorn zijn! </p>
-                <button> <a href="Recreation.html"> Lees meer </a> </button>
+                <button class="redirect_button"> <a href="Recreation.html"> Lees meer </a> </button>
             </section>
         </article>
 
