hero/aside test

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     </nav>
     <!-- header -->
     <section>
-        <header>
+        <header id="Hero_Homepage">
             <img src="img/Hoorn-Hero-V2.jpg" alt="Afbeelding Haven hoorn" title="Grote afbeelding website">
             <h1> View Hoorn</h1>
             <h2> Bekijk wat je kan doen in Hoorn </h2>
         </header>
         <!-- aside -->
-        <aside>
+        <aside id="Aside_Homepage">
             <img src="img/De-Beijaard-Hoorn.jpg" alt="Afbeelding Restaurants"
                 title="Restaurant de beijaard van buiten">
             <img src="img/Park-Schouwburg-Hoorn.jpg" alt="Afbeelding Kunst en Kultuur"
