flex hero/aside

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </ul>
     </nav>
     <!-- header -->
-    <section>
+    <section id="Header_Container">
         <header id="Hero_Homepage">
             <img src="img/Hoorn-Hero-V2.jpg" alt="Afbeelding Haven hoorn" title="Grote afbeelding website">
             <h1> View Hoorn</h1>
