aside left right test

--- a/index.html
+++ b/index.html
@@ -25,17 +25,19 @@
     </nav>
     <!-- header -->
     <section id="Header_Container">
-        <header id="Hero_Homepage">
-            <img src="img/Hoorn-Hero-V2.jpg" alt="Afbeelding Haven hoorn" title="Grote afbeelding website">
-            <h1> View Hoorn</h1>
-            <h2> Bekijk wat je kan doen in Hoorn </h2>
-        </header>
-        <!-- aside -->
         <aside id="Aside_Homepage">
             <img src="img/De-Beijaard-Hoorn.jpg" alt="Afbeelding Restaurants"
                 title="Restaurant de beijaard van buiten">
             <img src="img/Park-Schouwburg-Hoorn.jpg" alt="Afbeelding Kunst en Kultuur"
                 title="park Schouwburg in de avond">
+        </aside>
+        <header id="Hero_Homepage">
+            <img src="img/Hoorn-Hero-V2.jpg" alt="Afbeelding Haven hoorn" title="Grote afbeelding website">
+            <h1 class="Hero_Text"> View Hoorn</h1>
+            <h2 class="Hero_Text"> Bekijk wat je kan doen in Hoorn </h2>
+        </header>
+        <!-- aside -->
+        <aside id="Aside_Homepage">
             <img src="img/Kermis-Hoorn.jpg" alt="Afbeelding Evenementen" title="Kermis Hoorn op de rodesteen">
             <img src="img/Sportcentrum-Hoorn.jpg" alt="Afbeelding Recreatie" title="Binnen in Sportcentrum Hoorn">
         </aside>
