id > class aside

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </nav>
     <!-- header -->
     <section id="Header_Container">
-        <aside id="Aside_Homepage">
+        <aside class="Aside_Homepage">
             <img src="img/De-Beijaard-Hoorn.jpg" alt="Afbeelding Restaurants"
                 title="Restaurant de beijaard van buiten">
             <img src="img/Park-Schouwburg-Hoorn.jpg" alt="Afbeelding Kunst en Kultuur"
@@ -37,7 +37,7 @@
             <h2 class="Hero_Text"> Bekijk wat je kan doen in Hoorn </h2>
         </header>
         <!-- aside -->
-        <aside id="Aside_Homepage">
+        <aside class="Aside_Homepage">
             <img src="img/Kermis-Hoorn.jpg" alt="Afbeelding Evenementen" title="Kermis Hoorn op de rodesteen">
             <img src="img/Sportcentrum-Hoorn.jpg" alt="Afbeelding Recreatie" title="Binnen in Sportcentrum Hoorn">
         </aside>
