--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <!-- main -->
     <main>
         <!-- article 1 -->
-        <article>
+        <article class="grid_Item">
             <section>
                 <figure> 
                     <figcaption> Restaurants </figcaption>
@@ -63,7 +63,7 @@
         </article>
 
         <!-- article 2 -->
-        <article>
+        <article class="grid_Item">
             <section>
                 <figure> 
                     <figcaption> Kunst en Cultuur </figcaption>
@@ -80,7 +80,7 @@
         </article>
 
         <!-- article 3 -->
-        <article>
+        <article class="grid_Item">
             <section>
                 <figure> 
                     <figcaption> Evenementen </figcaption>
@@ -95,7 +95,7 @@
         </article>
 
         <!-- article 4 -->
-        <article>
+        <article class="grid_Item">
             <section>
                 <figure>
                     <figcaption> Recreatie </figcaption>
