--- a/index.html
+++ b/index.html
@@ -26,15 +26,16 @@
     <!-- header -->
     <section id="Header_Container">
         <aside class="Aside_Homepage">
-            <img src="img/De-Beijaard-Hoorn.jpg" alt="Afbeelding Restaurants"
-                title="Restaurant de beijaard van buiten">
+            <img src="img/De-Beijaard-Hoorn.jpg" alt="Afbeelding Restaurants" title="Restaurant de beijaard van buiten">
             <img src="img/Park-Schouwburg-Hoorn.jpg" alt="Afbeelding Kunst en Kultuur"
                 title="park Schouwburg in de avond">
         </aside>
         <header id="Hero_Homepage">
             <img src="img/Hoorn-Hero-V2.jpg" alt="Afbeelding Haven hoorn" title="Grote afbeelding website">
-            <h1 class="Hero_Text"> View Hoorn</h1>
-            <h2 class="Hero_Text"> Bekijk wat je kan doen in Hoorn </h2>
+            <section class="Hero_Text">
+                <h1> View Hoorn</h1>
+                <h2> Bekijk wat je kan doen in Hoorn </h2>
+            </section>
         </header>
         <!-- aside -->
         <aside class="Aside_Homepage">
@@ -49,10 +50,10 @@
         <!-- article 1 -->
         <article class="grid_Item">
             <section>
-                <figure> 
+                <figure>
                     <figcaption> Restaurants </figcaption>
-                <img src="img/De-Beijaard-Hoorn.jpg" alt="Afbeelding Restaurants"
-                    title="Restaurant de beijaard van buiten">
+                    <img src="img/De-Beijaard-Hoorn.jpg" alt="Afbeelding Restaurants"
+                        title="Restaurant de beijaard van buiten">
                 </figure>
             </section>
             <section>
@@ -65,10 +66,10 @@
         <!-- article 2 -->
         <article class="grid_Item">
             <section>
-                <figure> 
+                <figure>
                     <figcaption> Kunst en Cultuur </figcaption>
-                <img src="img/Park-Schouwburg-Hoorn.jpg" alt="Afbeelding Kunst en Kultuur"
-                    title="park Schouwburg in de avond">
+                    <img src="img/Park-Schouwburg-Hoorn.jpg" alt="Afbeelding Kunst en Kultuur"
+                        title="park Schouwburg in de avond">
                 </figure>
             </section>
             <section>
@@ -82,10 +83,10 @@
         <!-- article 3 -->
         <article class="grid_Item">
             <section>
-                <figure> 
+                <figure>
                     <figcaption> Evenementen </figcaption>
-                <img src="img/Kermis-Hoorn.jpg" alt="Afbeelding Evenementen" title="Kermis Hoorn op de rodesteen">
-            </figure>
+                    <img src="img/Kermis-Hoorn.jpg" alt="Afbeelding Evenementen" title="Kermis Hoorn op de rodesteen">
+                </figure>
             </section>
             <section>
                 <h5> Evenementen </h5>
@@ -99,8 +100,9 @@
             <section>
                 <figure>
                     <figcaption> Recreatie </figcaption>
-                <img src="img/Sportcentrum-Hoorn.jpg" alt="Afbeelding Recreatie" title="Binnen in Sportcentrum Hoorn">           
-            </figure>
+                    <img src="img/Sportcentrum-Hoorn.jpg" alt="Afbeelding Recreatie"
+                        title="Binnen in Sportcentrum Hoorn">
+                </figure>
             </section>
             <section>
                 <h5> Recreatie </h5>
