--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
     <main>
         <!-- article 1 -->
         <article class="grid_Item">
-            <section>
+            <section class="image_section">
                 <figure>
                     <figcaption> Restaurants </figcaption>
                     <img src="img/De-Beijaard-Hoorn.jpg" alt="Afbeelding Restaurants"
                         title="Restaurant de beijaard van buiten">
                 </figure>
             </section>
-            <section>
+            <section class="text_section">
                 <h5> Restaurants </h5>
                 <p> Ontdenk wat voor verschillende restaurants er in Hoorn te ontdekken zijn! </p>
                 <button class="redirect_button"> <a href="Restaurants.html"> Lees meer </a> </button>
@@ -65,14 +65,14 @@
 
         <!-- article 2 -->
         <article class="grid_Item">
-            <section>
+            <section class="image_section">
                 <figure>
                     <figcaption> Kunst en Cultuur </figcaption>
                     <img src="img/Park-Schouwburg-Hoorn.jpg" alt="Afbeelding Kunst en Kultuur"
                         title="park Schouwburg in de avond">
                 </figure>
             </section>
-            <section>
+            <section class="text_section">
                 <h5> Kunst en Cultuur </h5>
                 <p> Bekijk kunstwerken in de verschillende Musea in Hoorn, of geniet van verschillende
                     voorstellingen in theaters! </p>
@@ -82,13 +82,13 @@
 
         <!-- article 3 -->
         <article class="grid_Item">
-            <section>
+            <section class="image_section">
                 <figure>
                     <figcaption> Evenementen </figcaption>
                     <img src="img/Kermis-Hoorn.jpg" alt="Afbeelding Evenementen" title="Kermis Hoorn op de rodesteen">
                 </figure>
             </section>
-            <section>
+            <section class="text_section">
                 <h5> Evenementen </h5>
                 <p> Bekijk de jaarlijkse evenementen die in Hoorn gehouden worden! </p>
                 <button class="redirect_button"> <a href="Events.html"> Lees meer </a> </button>
@@ -97,14 +97,14 @@
 
         <!-- article 4 -->
         <article class="grid_Item">
-            <section>
+            <section class="image_section">
                 <figure>
                     <figcaption> Recreatie </figcaption>
                     <img src="img/Sportcentrum-Hoorn.jpg" alt="Afbeelding Recreatie"
                         title="Binnen in Sportcentrum Hoorn">
                 </figure>
             </section>
-            <section>
+            <section class="text_section">
                 <h5> Recreatie </h5>
                 <p> Bekijk wat voor recreatieve mogelijkheden er in Hoorn zijn! </p>
                 <button class="redirect_button"> <a href="Recreation.html"> Lees meer </a> </button>
